<resources>
    <string name="app_name">Registeration</string>
    <string name="string">앵송식대학교</string>
    <string name="string1">수강신청 도우미</string>
    <string name="string2">image</string>
    <string name="string3">아이디</string>
    <string name="string4">비밀번호</string>
    <string name="string5">로그인</string>
    <string name="string6">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>