<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorBackground">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/string2"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/string1"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/string3"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id="@+id/idText"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <EditText
                android:inputType="textPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/string4"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:id="@+id/passwordText"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:autofillHints="" />

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/string5"
                android:padding="10dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/loginButton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/string6"
                android:id="@+id/registerButton"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:layout_gravity="center"
                android:paddingBottom="10sp">

                <TextView
                    android:drawableStart="@drawable/ic_baseline_live_help_24"
                    android:drawableLeft="@drawable/ic_baseline_live_help_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text=" 어플리케이션 정보"
                    android:id="@+id/information"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>